# attendance-system

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
deploy/systemd/: attendance-system.env.example  attendance-system.service
fixtures/: sample_leases_multiple_devices.txt  sample_leases_one_device.txt
scripts/: install_systemd_service.sh  simulate_lease_changes.py
sql/: migrate_001_nullable_employee_id.sql  schema.sql  seed_example.sql
src/attendance_system/: __init__.py  config.py  logging_config.py  main.py  models.py  types.py
src/attendance_system/db/: __init__.py  connection.py  repositories.py
src/attendance_system/presence/: __init__.py  base.py  lease_file.py
src/attendance_system/services/: __init__.py  attendance_engine.py  discovery_broadcast.py  remote_sync.py  whitelist_sync.py
src/attendance_system/utils/: mac.py  time.py
tests/: test_attendance_engine.py  test_lease_parser.py  test_mac_utils.py
