[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "attendance-system"
version = "0.1.0"
description = "Local-first Wi-Fi attendance monitoring service for Raspberry Pi hotspots."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Local Development Scaffold" }]
dependencies = [
  "PyMySQL>=1.1.1",
  "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.5",
]

[project.scripts]
attendance-system = "attendance_system.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
